--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
 </head>
 
 <body>
-    <header>
-        <a>Planos</a>
-        <a>Aulas</a>
-        <a>Sobre</a>
-        <button class="button-login">Login</button>
-        <h2>PERFORMAXXGOLD</h2>
-    </header>
+    <div class="caixa-menu">
+        <header>
+            <a>Planos</a>
+            <a>Aulas</a>
+            <a>Sobre</a>
+            <button class="button-login">Login</button>
+            <h2>PERFORMAXXGOLD</h2>
+        </header>
+    </div>
     <section>
-        <main>
+        <div>
+        <main class="principal">
             <h1>PERFORMAXXGOLD</h1>
             <p>Treinos especificos paras atletas de futebol, de todos os níveis ,atletas amadores, categoria de base,
-                atletas profissionais. Muitos atletas já estão tendo resultados extraordinários com o método PERFORMAXX. 
-            Eai jogador, ta esperando o que ?</p>
+                atletas profissionais. Muitos atletas já estão tendo resultados extraordinários com o método PERFORMAXX.
+                Eai jogador, ta esperando o que ?</p>
             <button class="button-façaparte">Faça Parte desse time</button>
 
             <img src="./img/Logo PERFORMAXX.png.png" alt="logo-performaxxgold">
         </main>
+    </div>
     </section>
 </body>
 
